<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Guild Wars 2 Scout</string>
  <string name="dynamic_events">Dynamic Events</string>
  <string name="world_vs_world">World vs World</string>
  <string name="items">Items</string>
  <string name="recipes">Recipes</string>
  <string name="cancel">Cancel</string>
  <string name="select_world">Select World</string>
  <string name="refresh">Refresh</string>
  <string name="initializing">Initializing...</string>
  <string name="settings">Settings</string>
  <string name="auto_update_dynamic_events">Auto update dynamic events</string>
  <string name="auto_update_dynamic_events_interval">Auto update dynamic events every (seconds)</string>
  <string name="auto_update_wvw">Auto update WvW state</string>
  <string name="auto_update_wvw_interval">Auto update WvW state every (seconds)</string>
  <string name="owner">Owner</string>
  <string name="red_home">Red Home</string>
  <string name="blue_home">Blue Home</string>
  <string name="green_home">Green Home</string>
  <string name="center">Center</string>
  <string name="feature_not_implemented">This feature has not been implemented yet.</string>
  <string name="about">About</string>
  <string name="mornlight_copyright">© 2013 MORNLIGHT</string>
  <string name="arenanet_clarification">According to Guild Wars 2 Content Terms of Use, the legal notice is included below.</string>
  <string name="arenanet_copyright">© 2012 ArenaNet, Inc. All rights reserved. NCsoft, the interlocking NC logo, ArenaNet, Guild Wars, Guild Wars Factions, Guild Wars Nightfall, Guild Wars: Eye of the North, Guild Wars 2, and all associated logos and designs are trademarks or registered trademarks of NCsoft Corporation. All other trademarks are the property of their respective owners.</string>
  <string name="clarification">The data used in this application is retrieved from Guild Wars 2 official API. I do not guarantee any </string>
  <string name="weapon">Weapon</string>
  <string name="longbow">Longbow</string>
  <string name="axe">Axe</string>
  <string name="armor">Armor</string>
  <string name="update_database">Update Database</string>
  <string name="update_database_only_with_wifi">Update database only over WIFI</string>
  <string name="dagger">Dagger</string>
  <string name="focus">Focus</string>
  <string name="great_sword">Greatsword</string>
  <string name="hammer">Hammer</string>
  <string name="harpoon">Harpoon</string>
  <string name="mace">Mace</string>
  <string name="pistol">Pistol</string>
  <string name="rifle">Rifle</string>
  <string name="scepter">Scepter</string>
  <string name="shield">Shield</string>
  <string name="short_bow">Short Bow</string>
  <string name="spear">Spear</string>
  <string name="spear_gun">Spear Gun</string>
  <string name="staff">Staff</string>
  <string name="sword">Sword</string>
  <string name="torch">Torch</string>
  <string name="toy">Toy</string>
  <string name="trident">Trident</string>
  <string name="two_handed_toy">Two Handed Toy</string>
  <string name="warhorn">Warhorn</string>
  <string name="boots">Boots</string>
  <string name="coat">Coat</string>
  <string name="gloves">Gloves</string>
  <string name="helm">Helm</string>
  <string name="helm_aquatic">Aquatic Helm</string>
  <string name="leggings">Leggings</string>
  <string name="shoulders">Shoulders</string>
  <string name="bag">Bag</string>
  <string name="consumable">Consumable</string>
  <string name="container">Container</string>
  <string name="crafting_material">Crafting Material</string>
  <string name="gathering">Gathering</string>
  <string name="gizmo">Gizmo</string>
  <string name="mini">Mini</string>
  <string name="tool">Tool</string>
  <string name="trinket">Trinket</string>
  <string name="trophy">Trophy</string>
  <string name="upgrade_component">Upgrade Component</string>
  <string name="back">Back</string>
  <string name="appearance_change">Appearance Change</string>
  <string name="contract_npc">Contract NPC</string>
  <string name="food">Food</string>
  <string name="generic">Generic</string>
  <string name="halloween">Halloween</string>
  <string name="immediate">Immediate</string>
  <string name="transmutation">Transmutation</string>
  <string name="unlock">Unlock</string>
  <string name="utility">Utility</string>
  <string name="str_default">Default</string>
  <string name="gem">Gem</string>
  <string name="rune">Rune</string>
  <string name="sigil">Sigil</string>
  <string name="item_details">Item Details</string>
  <string name="restrictions">Restrictions: </string>
  <string name="game_type">Game Type: </string>
  <string name="vendor_value">Vendor Value</string>
  <string name="rarity">Rarity</string>
  <string name="menu">Menu</string>
  <string name="level">Level</string>
  <string name="rarity_all">All</string>
  <string name="rarity_basic">Basic</string>
  <string name="rarity_fine">Fine</string>
  <string name="rarity_masterwork">Masterwork</string>
  <string name="rarity_rare">Rare</string>
  <string name="rarity_exotic">Exotic</string>
  <string name="rarity_ascended">Ascended</string>
  <string name="rarity_legendary">Legendary</string>
  <string name="select_rarity">Select Rarity</string>
  <string name="select_level_range">Select Level Range</string>
  <string name="weapon_strength">Weapon Strength: </string>
  <string name="damageType">Damage Type: </string>
  <string name="defense">Defense: </string>
  <string name="required_level">Required Level: </string>
  <string name="weight_class">Weight Class:</string>
  <string name="empty"/>
  <string name="item_flag_hide_suffix">Hide Suffix</string>
  <string name="item_flag_no_sell">No Sell</string>
  <string name="item_flag_account_bound">Account Bound</string>
  <string name="item_flag_soul_bind_on_use">Soul Bind on Use</string>
  <string name="item_flag_no_salvage">No Salvage</string>
  <string name="item_flag_soul_bind_on_acquire">Soul Bind on Acquire</string>
  <string name="item_flag_not_upgradeable">Not Upgradeable</string>
  <string name="item_flag_no_mystic_forge">No Mystic Forge</string>
  <string name="item_flag_no_underwater">No Underwater</string>
  <string name="item_flag_unique">Unique</string>
  <string name="attribute_power">Power</string>
  <string name="attribute_toughness">Toughness</string>
  <string name="attribute_vitality">Vitality</string>
  <string name="attribute_precision">Precision</string>
  <string name="attribute_critical_damage">Critical Damage</string>
  <string name="attribute_condition_damage">Condition Damage</string>
  <string name="attribute_healing">Healing</string>
  <string name="start">Start:</string>
  <string name="end">End:</string>
  <string name="armorsmith">Armorsmith</string>
  <string name="artificer">Artificer</string>
  <string name="chef">Chef</string>
  <string name="huntsman">Huntsman</string>
  <string name="jeweler">Jeweler</string>
  <string name="leatherworker">Leatherworker</string>
  <string name="tailor">Tailor</string>
  <string name="weaponsmith">Weaponsmith</string>
  <string name="recipe_details">Recipe Details</string>
  <string name="bulk">Bulk</string>
  <string name="component">Component</string>
  <string name="insignia">Insignia</string>
  <string name="meal">Meal</string>
  <string name="refinement">Refinement</string>
  <string name="inscription">Inscription</string>
  <string name="potion">Potion</string>
  <string name="dessert">Dessert</string>
  <string name="dye">Dye</string>
  <string name="feast">Feast</string>
  <string name="ingredient_cooking">Ingredient Cooking</string>
  <string name="seasoning">Seasoning</string>
  <string name="snack">Snack</string>
  <string name="soup">Soup</string>
  <string name="amulet">Amulet</string>
  <string name="earring">Earring</string>
  <string name="ring">Ring</string>
  <string name="recipe">Recipe</string>
  <string name="disciplines">Disciplines</string>
  <string name="booze">Booze</string>
  <string name="min_rating">Min Rating</string>
</resources>
